--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "author": "Johan Peeters",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.5.5",
+    "babel-core": "^6.26.3",
     "jest": "^24.8.0"
   },
   "dependencies": {
-    "libsodium-wrappers": "^0.7.4"
+    "libsodium-wrappers": "^0.7.4",
+    "tweetnacl": "^1.0.1"
   },
   "engines": {
     "node": ">=10.16.0"
